# URL_Detector

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_urls.py  xgb.pkl
config/: config.py
docs/: api_reference.md  architecture.md  cybersecurity-analysis.md  design-decisions.md
model_training_notebook/: URL.ipynb  shuffled.csv
services/: __init__.py  checkers.py  feature_extractor.py  model_predictor.py  scoring_system.py
tests/: __init__.py  conftest.py  test_feature_extractor.py  test_integration.py
