[tool.poetry]
name = "malicious-url-detection"
version = "2.0.0"
description = "Multi-Layer URL Security Scanner using Machine Learning and 9 Security Checkers"
authors = ["Abdelmoussaouir"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.14"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
scikit-learn = "^1.3.2"
xgboost = "^2.0.0"
numpy = "^1.24.0"
tld = "^0.13"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
dnspython = "^2.4.2"
python-whois = "^0.8.0"
requests = "^2.31.0"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"